# telephony-server

./: .env.example  LICENSE  README.md  pyproject.toml
apps/: main.py
apps/telephony_app/: main.py  outbound_call.py
streaming_providers/: abstract.py  base.py  constants.py  default_factory.py  models.py
streaming_providers/jay/: jay.py
streaming_providers/pipecat/: frame_serializer.py  pipecat.py
telephony/: outbound_call.py
telephony/clients/: abstract.py  twilio_client.py
telephony/config_manager/: base_config_manager.py  redis_config_manager.py
telephony/constants/: constants.py
telephony/models/: events.py  model.py  telephony.py
telephony/server/: router.py  server.py  worker.py
telephony/server/conversation/: abstract_phone_conversation.py  twilio_phone_conversation.py
telephony/server/output_devices/: abstract_output_device.py  blocking_speaker_output.py  pilvo_output_device.py  rate_limit_interruptions_output_device.py  twilio_output_device.py
telephony/server/state_manager/: phone_state_manager.py  state_manager.py
telephony/utils/: async_requestor.py  asyncio.py  dtmf.py  events_manager.py  redis.py  redis_conversation_message_queue.py  strings.py
