[project]
name = "telephony-server"
version = "0.1.0"
description = "powerful bridge that connects telephony providers (Twilio, Vonage, Plivo, etc.) with real-time communication platforms (LiveKit, Jay.so, Pipecat, etc.). It enables seamless call routing, robust metrics collection, and observability features for enhanced telephony operations."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Navicstein Chinemerem", email = "navicsteinrotiv@gmail.com" },
]
dependencies = [
    "aiohttp>=3.11.11",
    "fastapi>=0.115.8",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "openai>=1.60.2",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "redis>=5.2.1",
]
